k8s/hotel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-deployment
  labels:
    app: hotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel
  template:
    metadata:
      labels:
        app: hotel
    spec:
      containers:
        - name: hotel
          image: app/hotel:0.0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
spec:
  selector:
    app: hotel
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # nodePort: 30000
