k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hotel-ingress
spec:
  rules:
  - host: hotels.tt
    http:
      paths:
      - backend:
          serviceName: hotel-service
          servicePort: 8080
